--- a/src/commonmark/en/dhis2.css
+++ b/src/commonmark/en/dhis2.css
@@ -1,18 +1,19 @@
 body {
-  color: #333;
-  counter-reset: chapter;
+  margin: auto;
+  padding-right: 1em;
+  padding-left: 1em;
+  max-width: 64em;
+  color: black;
   font-family: roboto, sans-serif;
   line-height: 140%;
-  margin: auto;
-  max-width: 64em;
-  padding-left: 1em;
-  padding-right: 1em;
+  color: #333;
+  counter-reset: chapter;
 }
 
 pre {
   background-color: #f7f7f7;
   color: #1a6094;
-  font-size: 90%;
+  font-size: 95%;
   line-height: 1.6em;
   margin: 3.5ex 0;
   padding: 2ex;
@@ -79,21 +80,21 @@ h2 a,
 h3 a,
 h4 a,
 h5 a {
+  text-decoration: none;
   color: #000;
 }
-
 h1,
 h2,
 h3,
 h4,
 h5 {
-  color: #000;
   font-family: roboto;
   font-weight: bold;
+  color: #000;
 }
-
 h1 {
   font-size: 130%;
+  break-before: always;
 }
 
 h2 {
@@ -104,18 +105,27 @@ h3 {
   font-size: 95%;
 }
 
+h4 {
+  font-size: 90%;
+  font-style: italic;
+}
+
+h5 {
+  font-size: 90%;
+  font-style: italic;
+}
+
 h1.title {
-  border: none;
   font-size: 200%;
   font-weight: bold;
-  padding-bottom: 0.2em;
   padding-top: 0.2em;
+  padding-bottom: 0.2em;
+  border: none;
 }
 
 dt code {
   font-weight: bold;
 }
-
 dd p {
   margin-top: 0;
 }
@@ -143,26 +153,26 @@ table td {
 }
 
 .banner {
-  background-color: #00518b;
-  height: 150px;
   width: 100%;
+  height: 150px;
+  background-color: #00518b;
 }
 
 .banner img {
+  width: 300px;
   display: block;
   margin: auto;
   padding: 30px;
-  width: 300px;
 }
 
 .license {
-  bottom: 0;
+  bottom: 0px;
 }
 
 #footer {
-  color: gray;
-  font-size: 70%;
   padding-top: 1em;
+  font-size: 70%;
+  color: gray;
   text-align: center;
 }
 
@@ -170,42 +180,108 @@ table td {
   page-break-before: always;
 }
 
+h1 {
+  string-set: chapter content();
+}
+h2,
+h3 {
+  string-set: section content();
+}
+
 nav ul {
   list-style-type: none;
 }
 
+img {
+  max-width: 100%;
+  max-height: 1000px;
+}
+
 @page {
-  border-bottom: 1px solid #000;
-  border-top: 1px solid #000;
+  size: A4;
   font-family: roboto, sans-serif;
   font-size: 85%;
-  margin-bottom: 40px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
   margin-top: 40px;
+  margin-bottom: 40px;
+  @top-right {
+    content: string(section);
+  }
+  @top-left {
+    content: string(chapter);
+  }
+}
+
+@page frontmatter {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+
+  @top-right {
+    content: "";
+  }
+  @top-left {
+    content: "";
+  }
+  @bottom-right {
+    content: counter(page, lower-roman);
+    font-family: roboto, sans-serif;
+    font-size: 85%;
+  }
+  @bottom-left {
+    content: "";
+  }
+}
+@page frontmatter :left {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+
+  @top-right {
+    content: "";
+  }
+  @top-left {
+    content: "";
+  }
+  @bottom-left {
+    content: counter(page, lower-roman);
+    font-family: roboto, sans-serif;
+    font-size: 85%;
+  }
+  @bottom-right {
+    content: "";
+  }
 }
 
 @page :first {
-  border-bottom: 0 solid #000;
-  border-top: 0 solid #000;
-  margin: 500px -20px -20px;
+  border-top: 0px solid black;
+  border-bottom: 0px solid black;
+  margin: -20px;
+  margin-top: 500px;
   text-align: center;
-}
 
-img {
-  max-width: 100%;
+  @top-right {
+    content: "";
+  }
+  @top-left {
+    content: "";
+  }
+  @bottom-right {
+    content: "";
+  }
+  @bottom-left {
+    content: "";
+  }
 }
 
 @page :right {
-  font-family: roboto, sans-serif;
-  font-size: 85%;
+  @bottom-right {
+    content: counter(page);
+    font-family: roboto, sans-serif;
+    font-size: 85%;
+  }
 }
-
-h4,
-h5 {
-  font-size: 90%;
-  font-style: italic;
-}
-
-@page frontmatter,@page frontmatter :left {
-  border-bottom: 1px solid #000;
-  border-top: 1px solid #000;
+@page :left {
+  @bottom-left {
+    content: counter(page);
+  }
 }
