--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -116,6 +116,7 @@ h5 {
   font-family: Arial, 'Open Sans';
   font-weight: bold;
   color: #000;
+  margin-top: 1.7em;
 }
 h1 {
   break-before: always;
