--- a/src/commonmark/en/resources/css/dhis2_pdf.css
+++ b/src/commonmark/en/resources/css/dhis2_pdf.css
@@ -25,12 +25,6 @@ p code {
   white-space: normal;
 }
 
-
-blockquote,
-q {
-  quotes: none;
-}
-
 blockquote:before,
 q:before,
 blockquote:after,
@@ -64,7 +58,7 @@ blockquote p {
   background-image: url(../images/admon/note.png);
 }
 
-.Tip{
+.Tip, .Truc {
   background-image: url(../images/admon/tip.png);
 }
 
@@ -72,12 +66,11 @@ blockquote p {
   background-image: url(../images/admon/important.png);
 }
 
-.Caution{
+.Caution, .Prudence{
   background-image: url(../images/admon/caution.png);
 }
 
-
-.Warning{
+.Warning, .Attention{
   background-image: url(../images/admon/warning.png);
 }
 
@@ -91,13 +84,11 @@ caption {
 
 a {
   color: #07c;
-  cursor: pointer;
   text-decoration: underline;
 }
 
 nav a {
   color: #07c;
-  cursor: pointer;
   text-decoration: none;
 }
 
