--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -186,7 +186,7 @@ table td {
 }
 
 .banner {
-  margin-top:70px;
+  margin-top:-10px;
   width: 100%;
   height: 8px;
   background-color: #43CBCB;
@@ -202,6 +202,7 @@ table td {
   width: 180px;
   display: block;
   padding: 0px;
+  background: #FFFFFF;
 }
 
 .productionDiv {
