--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -24,6 +24,7 @@ p code {
   white-space: normal;
 }
 
+
 blockquote,
 q {
   quotes: none;
@@ -78,6 +79,11 @@ blockquote p {
   background-image: url(../images/admon/warning.png);
 }
 
+.thanks{
+  border:1px solid #ddd;
+  padding:0 1em 0;
+  font-family: 'Rubik';
+}
 
 caption {
   font-style: italic;
@@ -96,6 +102,10 @@ a {
 nav a {
   color: #07c;
   cursor: pointer;
+  text-decoration: none;
+}
+
+.thanks a {
   text-decoration: none;
 }
 
@@ -173,6 +183,10 @@ table td {
   border:0px;
 }
 
+.navheader table{
+    margin-bottom:1em;
+}
+
 .navheader a, .navfooter a {
   text-decoration: none;
 }
@@ -186,7 +200,7 @@ table td {
 }
 
 .banner {
-  margin-top:-10px;
+  margin-top:67px;
   width: 100%;
   height: 8px;
   background-color: #43CBCB;
