--- a/src/commonmark/en/resources/templates/dhis2_chunked_template.html
+++ b/src/commonmark/en/resources/templates/dhis2_chunked_template.html
@@ -2,9 +2,11 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <title>Chapter&nbsp;2.&nbsp;What is DHIS2?</title>
+    <title></title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/css/dhis2.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/dhis2_chunked.css">
     <link id="homelink" rel="home" href="" title="">
     <link id="uplink" rel="up" href="" title="">
     <link id="prevlink" id="prevnav" rel="prev" href="" title="">
@@ -23,8 +25,8 @@
                 <td width="20%" align="right">&nbsp;<a id="nextnav" accesskey="n" href="">Next</a></td>
             </tr>
         </table>
-        <hr>
     </div>
+        <hr>
     <div class="chapter">
     </div>
     <div class="navfooter">
