--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -24,6 +24,7 @@ p code {
   white-space: normal;
 }
 
+
 blockquote,
 q {
   quotes: none;
@@ -78,6 +79,11 @@ blockquote p {
   background-image: url(../images/admon/warning.png);
 }
 
+.thanks{
+  border:1px solid #ddd;
+  padding:0 1em 0;
+  font-family: 'Rubik';
+}
 
 caption {
   font-style: italic;
@@ -96,6 +102,10 @@ a {
 nav a {
   color: #07c;
   cursor: pointer;
+  text-decoration: none;
+}
+
+.thanks a {
   text-decoration: none;
 }
 
@@ -123,11 +133,21 @@ h1 {
 h1.title {
   font-size: 200%;
   font-weight: bold;
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
+  padding-top: 1.2em;
   border: none;
+  font-family: 'Rubik', sans-serif;
+  text-align: center;
 }
 
+h2.subtitle {
+  font-size: 180%;
+  font-weight: normal;
+  padding-bottom: 1.2em;
+  padding-left:0px;
+  margin-left:0px;
+  font-family: 'Rubik', sans-serif;
+  text-align: center;
+}
 dt code {
   font-weight: bold;
 }
@@ -163,21 +183,44 @@ table td {
   border:0px;
 }
 
+.navheader table{
+    margin-bottom:1em;
+}
+
 .navheader a, .navfooter a {
   text-decoration: none;
 }
 
-.banner {
-  width: 100%;
-  height: 150px;
-  background-color: #00518b;
+.headerDiv {
+  left:0;
+  top:0;
+  width:100%;
+  margin-left:-1em;
+  text-align: center;
 }
 
-.banner img {
-  width: 300px;
+.banner {
+  margin-top:67px;
+  width: 100%;
+  height: 8px;
+  background-color: #43CBCB;
+}
+
+.coverlogo {
+  height: 60px;
+  position:absolute;
+  top: 5px;
+}
+
+.coverlogo img {
+  width: 180px;
   display: block;
-  margin: auto;
-  padding: 30px;
+  padding: 0px;
+  background: #FFFFFF;
+}
+
+.productionDiv {
+  display:none;
 }
 
 .license {
