fix: adjust some of the html formatting for improved rendering

--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -59,6 +59,12 @@ blockquote p {
   margin: 5px;
 }
 
+.center{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
+
 .Note{
   background-image: url(../images/admon/note.png);
 }
