--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -65,6 +65,18 @@ blockquote p {
   margin-right:auto;
 }
 
+figure{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+figcaption{
+  text-align:center;
+  margin:1em;
+  font-style:italic;
+}
+
 .Note{
   background-image: url(../images/admon/note.png);
 }
