--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -59,6 +59,12 @@ blockquote p {
   margin: 5px;
 }
 
+td blockquote{
+  margin: 0px;
+  margin-top:5px;
+  padding: 5px;
+  padding-top:35px;
+}
 .center{
   display:block;
   margin-left:auto;
@@ -273,6 +279,7 @@ nav ul {
 img {
   max-width: 100%;
   max-height: 800px;
+  margin:3%;
 }
 
 hr {
