--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -95,7 +95,7 @@ figcaption{
   background-image: url(../images/admon/important.png);
 }
 
-.Construction{
+.Work_In_Progress{
   background-image: url(../images/admon/underconstruction.png);
 }
 
