fix: better handling of submodules

--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -69,12 +69,14 @@ td blockquote{
   display:block;
   margin-left:auto;
   margin-right:auto;
+  text-align: center;
 }
 
 figure{
   display:block;
   margin-left:auto;
   margin-right:auto;
+  text-align: center;
 }
 
 figcaption{
