--- a/src/commonmark/en/resources/mkdocs/theme/partials/nav.html
+++ b/src/commonmark/en/resources/mkdocs/theme/partials/nav.html
@@ -16,10 +16,10 @@
 
   <div class="select">
   <select onChange="window.document.location.href=this.options[this.selectedIndex].value;">
-  		<option value="/{{ config.dhis2_version }}/{{ config.theme.language }}/{{ page.url }}">{{ config.dhis2_version }}</option>
-      {% for ver_item in config.dhis2_versions %}
-        {% if ver_item != config.dhis2_version %}
-          <option value="/{{ ver_item }}/{{ config.dhis2_language }}/{{ page.url }}"><p>{{ ver_item }}</option>
+  		<option value="/{{ config.extra.dhis2_version }}/{{ config.theme.language }}/{{ page.url }}">{{ config.extra.dhis2_version }}</option>
+      {% for ver_item in config.extra.dhis2_versions %}
+        {% if ver_item != config.extra.dhis2_version %}
+          <option value="/{{ ver_item }}/{{ config.extra.dhis2_language }}/{{ page.url }}"><p>{{ ver_item }}</option>
         {% endif %}
       {% endfor %}
   </select>
@@ -27,15 +27,15 @@
 
   <div class="select">
   <select onChange="window.document.location.href=this.options[this.selectedIndex].value;">
-      {% for key, value in config.dhis2_languages.items() %}
-        {% if key == config.dhis2_language %}
-          <option value="/{{ config.dhis2_version }}/{{ key }}/"><p>{{ value }}</option>
+      {% for key, value in config.extra.dhis2_languages.items() %}
+        {% if key == config.extra.dhis2_language %}
+          <option value="/{{ config.extra.dhis2_version }}/{{ key }}/"><p>{{ value }}</option>
         {% endif %}
       {% endfor %}
 
-      {% for key, value in config.dhis2_languages.items() %}
-        {% if key != config.dhis2_language %}
-          <option value="/{{ config.dhis2_version }}/{{ key }}/"><p>{{ value }}</option>
+      {% for key, value in config.extra.dhis2_languages.items() %}
+        {% if key != config.extra.dhis2_language %}
+          <option value="/{{ config.extra.dhis2_version }}/{{ key }}/"><p>{{ value }}</option>
         {% endif %}
       {% endfor %}
   </select>
