--- a/src/commonmark/en/resources/css/dhis2_pdf.css
+++ b/src/commonmark/en/resources/css/dhis2_pdf.css
@@ -54,16 +54,24 @@ blockquote p {
   margin: 5px;
 }
 
+td blockquote{
+  margin: 0px;
+  margin-top:5px;
+  padding: 5px;
+}
+
 .center{
   display:block;
   margin-left:auto;
   margin-right:auto;
+  text-align: center;
 }
 
 figure{
   display:block;
   margin-left:auto;
   margin-right:auto;
+  text-align: center;
 }
 
 figcaption{
@@ -193,7 +201,7 @@ h2.subtitle {
   position: absolute;
   bottom:100px;
   left: 0px;
-  height:100px;
+  height:120px;
   width:100%;
 }
 
@@ -205,6 +213,13 @@ p.productionInfo {
   border: none;
 }
 
+p.productionInfoSub {
+  font-size: 20px;
+  font-weight: normal;
+  font-family: 'Rubik', sans-serif;
+  color: #393D4D;
+  border: none;
+}
 
 dt code {
   font-weight: bold;
@@ -282,7 +297,8 @@ nav ul {
 
 img {
   max-width: 100%;
-  max-height: 450px;
+  max-height: 800px;
+  margin:3%;
 }
 
 @page {
