--- a/src/commonmark/en/resources/css/dhis2.css
+++ b/src/commonmark/en/resources/css/dhis2.css
@@ -59,6 +59,32 @@ blockquote p {
   margin: 5px;
 }
 
+td blockquote{
+  margin: 0px;
+  margin-top:5px;
+  padding: 5px;
+  padding-top:35px;
+}
+.center{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  text-align: center;
+}
+
+figure{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  text-align: center;
+}
+
+figcaption{
+  text-align:center;
+  margin:1em;
+  font-style:italic;
+}
+
 .Note{
   background-image: url(../images/admon/note.png);
 }
@@ -75,7 +101,7 @@ blockquote p {
   background-image: url(../images/admon/caution.png);
 }
 
-.Warning, .Attention{
+.Warning, .Attention, .Danger{
   background-image: url(../images/admon/warning.png);
 }
 
@@ -125,6 +151,7 @@ h5 {
   font-family: Arial, 'Open Sans';
   font-weight: bold;
   color: #000;
+  margin-top: 1.7em;
 }
 h1 {
   break-before: always;
@@ -254,6 +281,7 @@ nav ul {
 img {
   max-width: 100%;
   max-height: 800px;
+  margin:3%;
 }
 
 hr {
