feat: improved status icons from Joe

--- a/src/commonmark/en/resources/css/mkdocs_dhis2.css
+++ b/src/commonmark/en/resources/css/mkdocs_dhis2.css
@@ -99,7 +99,7 @@ figcaption {
 }
 
 .work_in_progress {
-  background-image: url(../images/admin/wip.png);
+  background-image: url(../images/admin/icon-wip.png);
 }
 
 .example {
