--- a/src/commonmark/en/resources/mkdocs/theme/partials/header.html
+++ b/src/commonmark/en/resources/mkdocs/theme/partials/header.html
@@ -22,7 +22,9 @@
             {{ config.site_name }}
           {% else %}
             <span class="md-header-nav__topic">
-              {{ config.site_name }}
+              {% if page and page.parent %}
+                {{ page.parent.title }}
+              {% endif %}
             </span>
             <span class="md-header-nav__topic">
               {% if page and page.meta and page.meta.title %}
