--- a/src/commonmark/en/resources/css/mkdocs_dhis2.css
+++ b/src/commonmark/en/resources/css/mkdocs_dhis2.css
@@ -217,7 +217,7 @@ article {
 }
 
 .md-main__inner {
-  margin-top: 0;
+  padding-top: 0;
 }
 .md-header[data-md-state="shadow"] {
   box-shadow: 0 2px 4px 0 rgba(3,27,78,0.10);
@@ -280,20 +280,12 @@ article {
   color: var(--grey600);
 }
 
-.md-nav__link.md-nav__link--active {
-  color: var(--blue700);
-  background: var(--blue100);
-  border-radius: 3px;
-  padding: 2px;
-}
-
-
 .md-nav__title{
   margin-bottom:15px;
 }
 
 .md-footer-nav {
-  padding:1rem 0 2rem;
+  margin:1rem 0 2rem;
   background-color: white;
   color: var(--grey900);
 }
