--- a/src/commonmark/en/resources/mkdocs/theme/partials/nav.html
+++ b/src/commonmark/en/resources/mkdocs/theme/partials/nav.html
@@ -14,32 +14,7 @@
     {{ config.site_name }}
   </label>
 
-  <div class="select">
-  <select onChange="window.document.location.href=this.options[this.selectedIndex].value;">
-  		<option value="/{{ config.extra.dhis2_version }}/{{ config.theme.language }}/{{ page.url }}">{{ config.extra.dhis2_version }}</option>
-      {% for ver_item in config.extra.dhis2_versions %}
-        {% if ver_item != config.extra.dhis2_version %}
-          <option value="/{{ ver_item }}/{{ config.extra.dhis2_language }}/{{ page.url }}"><p>{{ ver_item }}</option>
-        {% endif %}
-      {% endfor %}
-  </select>
-  </div>
 
-  <div class="select">
-  <select onChange="window.document.location.href=this.options[this.selectedIndex].value;">
-      {% for key, value in config.extra.dhis2_languages.items() %}
-        {% if key == config.extra.dhis2_language %}
-          <option value="/{{ config.extra.dhis2_version }}/{{ key }}/"><p>{{ value }}</option>
-        {% endif %}
-      {% endfor %}
-
-      {% for key, value in config.extra.dhis2_languages.items() %}
-        {% if key != config.extra.dhis2_language %}
-          <option value="/{{ config.extra.dhis2_version }}/{{ key }}/"><p>{{ value }}</option>
-        {% endif %}
-      {% endfor %}
-  </select>
-  </div>
 
   {% if config.repo_url %}
     <div class="md-nav__source">
@@ -47,6 +22,9 @@
     </div>
   {% endif %}
   <ul class="md-nav__list" data-md-scrollfix>
+
+    {% include "partials/lang_selector.html"  %}
+
     {% for nav_item in nav %}
       {% set path = "nav-" + loop.index | string %}
       {% set level = 1 %}
